<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TrackIt</string>
    <string name="subtitle">Form and track all your habits</string>

    <!-- UI strings -->
    <string name="register_username">Create a unique username:</string>
    <string name="register_password">Enter your preferred password:</string>
    <string name="login_password">Enter your password:</string>
    <string name="login_username">Enter your username:</string>
    <string name="add_title_text">Enter habit title:</string>
    <string name="add_reason_text">Enter reason:</string>
    <string name="add_start_date_text">Date started:</string>
    <string name="start_date_format">MM/DD/YYYY</string>
    <string name="add_repeat_text">Repeat:</string>
    <string name="view_details">View habit details</string>
    <string name="habit_done">Habit Done!</string>
    <string name="habit_title_text">Habit name: </string>
    <string name="habit_reason_text">Reason:</string>
    <string name="habit_start_date_text">Date started:</string>
    <string name="habit_repeat_text">Repeat:</string>
    <string name="no_habits_today">You do not have any pending habit(s) listed for today.</string>
    <string name="no_habits">You have not added any habit(s).</string>
    <string name="add_comment">Add Comment (optional): </string>
    <string name="add_photo">Add Photograph (optional): </string>
    <string name="add_location">Drag and drop the marker to set location: </string>
    <string name="habit_privacy_text">Set habit privacy: </string>
    <string name="record_location">Record location (optional): </string>
    <string name="no_follow_requests">You have no new follow requests.</string>
    <string name="no_event">You do not have any events listed for this habit.</string>
    <string name="error_date">No Date recorded</string>
    <string name="view_privacy">Habit privacy: </string>
    <string name="view_event_comment_text">Comment: </string>
    <string name="view_photo_text">Uploaded photo: </string>
    <string name="view_location_text">Recorded location:</string>
    <string name="edit_comment">Edit Comment: </string>
    <string name="edit_photo">Edit Photograph: </string>
    <string name="edit_location">Edit location: </string>
    <string name="error_username_empty">Username field cannot be empty.</string>

    <!-- Button labels -->
    <string name="button_sign_up" tools:ignore="ExtraTranslation">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="button_register" tools:ignore="ExtraTranslation">Register</string>
    <string name="button_add_habit">Add Habit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save_habit">Save Changes</string>
    <string name="button_edit_habit">Edit Habit</string>
    <string name="button_delete_habit">Delete Habit</string>
    <string name="button_event_habit">View Events</string>
    <string name="button_add_photo">Upload photograph</string>
    <string name="button_add_location">Record location</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip">Skip</string>
    <string name="button_edit_event">Edit Event</string>
    <string name="button_delete_event">Delete Event</string>
    <string name="button_edit_location">Change location</string>
    <string name="button_edit_image">Change photograph</string>
    <string name="button_remove_location">Remove location</string>
    <string name="button_remove_image">Remove photograph</string>
    <string name="button_save_event">Save Changes</string>


    <!-- Title bar strings -->
    <string name="title_register">Register</string>
    <string name="title_add_habit">Add Habit</string>
    <string name="title_edit_habit">Edit Habit</string>
    <string name="title_todays_habits">Today\'s Habits</string>
    <string name="title_view_habit">View Habits</string>
    <string name="add_event">Add Event</string>
    <string name="view_event">View Event</string>
    <string name="edit_event">Edit Event</string>


    <!-- EditText hints -->
    <string name="add_title_hint">(max. 20 characters)</string>
    <string name="add_reason_hint">(max. 30 characters)</string>

    <!-- Checkbox labels -->
    <string name="checkbox_monday">M</string>
    <string name="checkbox_tuesday">T</string>
    <string name="checkbox_wednesday">W</string>
    <string name="checkbox_thursday">R</string>
    <string name="checkbox_friday">F</string>
    <string name="checkbox_saturday">S</string>
    <string name="checkbox_sunday">Su</string>

    <!-- Nav bar labels -->
    <string name="nav_bar_today">Today</string>
    <string name="nav_bar_search">Search</string>
    <string name="nav_bar_feed">Feed</string>
    <string name="nav_bar_notifications">Notifications</string>
    <string name="nav_bar_profile">Profile</string>

    <!-- Nav bar labels -->
    <string name="title_events_list">Events</string>

    <!-- Resource keys -->
    <string name="map_key">AIzaSyB4U1p27oBWodRYf4hl6FqVbHWlOE7hyE4</string>

</resources>