<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bar_today"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_bar_today" />
    <item
        android:id="@+id/nav_bar_search"
        android:icon="@drawable/search"
        android:title="@string/nav_bar_search" />
    <item
        android:id="@+id/nav_bar_feed"
        android:icon="@drawable/feed"
        android:title="@string/nav_bar_feed"/>
    <item
        android:id="@+id/nav_bar_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_bar_notifications"/>
    <item
        android:id="@+id/nav_bar_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_bar_profile"/>
</menu>